--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
   user-select: none;
 }
 
-::-webkit-scrollbar-thumb {
-  display: none;
+::-webkit-scrollbar,::-webkit-scrollbar-thumb {
+  display: none !important;
 }
 
 main {
